--- a/responsive.css
+++ b/responsive.css
@@ -85,8 +85,10 @@
    .list-img{
        width: 100%;
        margin-bottom: 20px;
+      margin: 0 auto;
    }
    .list-text{
        width: 100%;
+      margin: 0 auto;
    }
 }
