--- a/style.css
+++ b/style.css
@@ -326,6 +326,9 @@ a:hover{
     padding: 0 20px;
     margin: 0 auto;
   }
+ .main{
+      padding-top: 30px;
+  }
   .main-top{
       padding-top: 60px;
       border-top: 1px solid rgb(165, 24, 24);
