--- a/style.css
+++ b/style.css
@@ -377,3 +377,39 @@ a:hover{
 .list-text a{
     cursor: pointer;
   }
+.coments{
+  font-family: 'Reggae One', cursive;
+font-size: 20px;
+margin: 50px 0;
+}
+.name{
+  width: 18%;
+  border: 1px solid white;
+  color:rgb(201, 20, 20) ;
+}
+.coment{
+  border: 1px solid white;
+  color:rgb(201, 20, 20) ;
+}
+.sheet{
+  margin-top: 30px;
+  color:rgb(201, 20, 20) ;
+}
+.submited input{
+  border: 1px solid white;
+}
+.submited input :hover{
+  border: 1px solid rgb(201, 20, 20);
+}
+.submited :hover{
+  color: black;
+  background-color: rgb(201, 20, 20);
+  opacity: 1.0;
+}
+.submited{
+  margin-top: 10px;
+  cursor: pointer;
+  color:rgb(201, 20, 20) ;
+  opacity: 0.8;
+}
+
